# agentic-finetune

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: finetune_agent.py  register.py
agent/configs/: config.yml
eval/: quick_eval.py
tools/: data_prep_tool.py  decision_tool.py  deployment_tool.py  diagnosis_tool.py  evaluation_tool.py  training_monitor_tool.py  training_trigger_tool.py
